add some autoconfig changes